@@ -1,3 +1,7 @@
+2018-12-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml (notifications): Small generalization of script
+
 2018-12-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version and date
